[package]
name = "lunatic_tasks"
version = "0.1.1"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"
description = "Utilities for working with tasks in Lunatic"
repository = "https://github.com/tqwewe/lunatic_tasks"
license = "MIT OR Apache-2.0"
keywords = ["lunatic", "tasks", "ordered", "unordered", "buffered"]
categories = ["wasm"]

[dependencies]
lunatic = "0.11"
serde = { version = "1.0" }

[package.metadata.docs.rs]
targets = ["wasm32-wasi"]
